--- a/JSFProject/WebContent/jsf/login.xhtml
+++ b/JSFProject/WebContent/jsf/login.xhtml
@@ -10,8 +10,8 @@
       <h:body>
       	<h:form>
       		<p>#{msgs.login_header}</p>
-      		<p>#{msgs.login_input_login}:<h:inputText value="#{login.userName}"/></p>
-      		<p>#{msgs.login_input_password}:<h:inputSecret value="#{login.password}"/></p>
+      		<p>#{msgs.login_input_login}:<h:inputText required="true" value="#{login.userName}"/></p>
+      		<p>#{msgs.login_input_password}:<h:inputSecret required="true" value="#{login.password}"/></p>
       		<p><h:commandButton id="loginButton" value="#{msgs.login_button_signIn}" action="#{login.validateUser}"/></p>
       		<p><h:messages style="color:red" /></p>
       	</h:form>
