--- a/JSFProject/WebContent/jsf/search.xhtml
+++ b/JSFProject/WebContent/jsf/search.xhtml
@@ -1,7 +1,68 @@
 <ui:composition 
     xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <h2>search</h2>
+    xmlns:f="http://java.sun.com/jsf/core"      
+    xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:ui="http://java.sun.com/jsf/facelets"
+    xmlns:a4j="http://richfaces.org/a4j"
+    xmlns:rich="http://richfaces.org/rich">
+    <h:form id="searchForm">
+    	#{msgs.search_keyword}:<h:inputText required="true" value="#{searchPage.searchPhrase}"/>
+    	<h:selectOneMenu value="#{searchPage.category}">
+    		<f:selectItem itemValue="fullName" itemLabel="#{msgs.view_header_full_name}" />
+    		<f:selectItem itemValue="address" itemLabel="#{msgs.view_header_address}" />
+    		<f:selectItem itemValue="phoneNumber" itemLabel="#{msgs.view_header_telephone}" />
+    		<f:selectItem itemValue="all" itemLabel="#{msgs.search_all}" />
+    	</h:selectOneMenu>
+    	<h:commandButton value="#{msgs.search_button}" action="#{searchPage.searchRecord()}" />
+    </h:form>
+    <h:form><p><h:messages style="color:red" /></p></h:form>
+    <h:panelGroup id="dataTable">
+	    <h:dataTable id="searchTable" binding="#{tableSearch}" value="#{searchPage.searchedRecords}" var="record" styleClass="#{searchPage.searchedRecords.size() > 0 ? '' : 'hidden'}">
+	    	<h:column>
+	    		<f:facet name="header">#{msgs.view_header_number}</f:facet>
+	    		<h:form>
+	    			<h:commandLink value="#{tableSearch.rowIndex + 1}">       
+	    				<a4j:ajax render="popupWindowSearch" oncomplete="#{rich:component('popupWindowSearch')}.show()"/>
+	    				<f:setPropertyActionListener target="#{searchPage.record}" value="#{record}"/>
+					</h:commandLink>
+	    		</h:form>
+	    	</h:column>
+	    	<h:column>
+	    		<f:facet name="header">#{msgs.view_header_full_name}</f:facet>
+	    		#{record.fullName}
+	    	</h:column>
+	    	<h:column>
+	    		<f:facet name="header">#{msgs.view_header_address}</f:facet>
+	    		#{record.address}
+	    	</h:column>
+	    	<h:column>
+	    		<f:facet name="header">#{msgs.view_header_telephone}</f:facet>
+	    		#{record.phoneNumber}
+	    	</h:column>
+	    </h:dataTable>
+	</h:panelGroup>
+    <rich:popupPanel autosized="true" id="popupWindowSearch" modal="true" onmaskclick="#{rich:component('popupWindowSearch')}.hide()">
+  		<f:facet name="header">
+  			<h:outputText styleClass="bold" value="#{msgs.profile_header}"/>
+    		<h:outputText value="#{searchPage.record.fullName}"/>
+  		</f:facet>
+  		<f:facet name="controls">
+  			<h:outputText value="X" onclick="#{rich:component('popupWindowSearch')}.hide(); return false;" style="cursor:pointer; font-size:16px"/>
+        </f:facet>
+        <p id="imageProfile"><h:graphicImage url="data:image/jpg;base64,${searchPage.record.getBase64Code()}" alt="${searchPage.record.fullName}" style="width: 150px; height: 200px;"/></p>
+  		<h:form>
+  			<p><h:outputText styleClass="bold" value="#{msgs.profile_full_name}"/>
+    		<h:outputText value="#{searchPage.record.fullName}"/></p>
+  			<p><h:outputText styleClass="bold" value="#{msgs.profile_address}"/>
+    		<h:outputText value="#{searchPage.record.address}"/></p>
+  			<p><h:outputText styleClass="bold" value="#{msgs.profile_telephone}"/>
+    		<h:outputText value="#{searchPage.record.phoneNumber}"/></p>
+  			<p><h:outputText styleClass="bold" value="#{msgs.profile_date_creation}"/>
+    		<h:outputText value="#{searchPage.record.creationDate}"/></p>
+  			<p><h:outputText styleClass="bold" value="#{msgs.profile_mail}"/>
+    		<h:outputText value="#{searchPage.record.mail}"/></p>
+  			<p><h:outputText styleClass="bold" value="#{msgs.profile_birthdate}"/>
+    		<h:outputText value="#{searchPage.record.birthDate}"/></p>
+  		</h:form>     
+	</rich:popupPanel>
 </ui:composition>
