Add last functions
Change-Id: I5d80a5018f2c0c0924e04408669b9e9d0519be61

--- a/JSFProject/WebContent/jsf/add.xhtml
+++ b/JSFProject/WebContent/jsf/add.xhtml
@@ -5,15 +5,31 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:a4j="http://richfaces.org/a4j"
     xmlns:rich="http://richfaces.org/rich">
-    <h:form>
-    	<p>#{msgs.add_header}</p>
-      	<p>#{msgs.profile_full_name}<br/><h:inputText required="true" value="#{addPage.record.fullName}" /></p>
-      	<p>#{msgs.profile_address}<br/><h:inputText required="true" value="#{addPage.record.address}" /></p>
-      	<p>#{msgs.profile_telephone}<br/><h:inputText required="true" value="#{addPage.record.phoneNumber}" /></p>
-      	<p>#{msgs.profile_mail}<br/><h:inputText value="#{addPage.record.mail}" /></p>
-      	<p>#{msgs.profile_birthdate}<br/><rich:calendar required="true" cellWidth="24px" cellHeight="22px" popupStyle="width:200px" locale="#{sessionInformation.currentLocale}" datePattern="yyyy-MM-dd" value="#{addPage.record.birthDate}"/></p>
-      	<p>#{msgs.profile_photo}<rich:fileUpload immediateUpload="true" id="fileUploadId"  fileUploadListener="#{addPage.listener}" listHeight="100%" acceptedTypes="jpg, gif, png, bmp" maxFilesQuantity="1" maxFileSize="2000000"/></p>
+    <h:outputStylesheet library="css" name="addStyle.css"/>
+    <h:form id="addForm" styleClass="addBox">
+    	<h3>#{msgs.add_header}</h3>
+      	<p>#{msgs.profile_full_name}<br/><h:inputText required="true" id="usernameAdd" requiredMessage=" #{msgs.message_empty_field}" value="#{addPage.record.fullName}"  validatorMessage=" #{msgs.message_wrong_username}" >
+      		<f:validateLength minimum="3"/>
+      		<f:validateRegex pattern="^[ a-zA-Zа-яА-ЯёЁ]+$"/>
+      	</h:inputText>
+      	<h:message for="usernameAdd" style="color:red"/></p>
+      	<p>#{msgs.profile_address}<br/><h:inputText id="addressAdd" required="true" requiredMessage=" #{msgs.message_empty_field}" value="#{addPage.record.address}" validatorMessage=" #{msgs.message_wrong_address}">
+      		<f:validateLength minimum="2"/>
+      		<f:validateRegex pattern="^[ \wа-яА-ЯёЁ\.\,\-]*$"/>
+      	</h:inputText>
+      	<h:message for="addressAdd" style="color:red"/></p>
+      	<p>#{msgs.profile_telephone}<br/><h:inputText id="phoneAdd" required="true" requiredMessage=" #{msgs.message_empty_field}" value="#{addPage.record.phoneNumber}" validatorMessage=" #{msgs.message_wrong_telephone}">
+      		<f:validateLength minimum="2"/>
+      		<f:validateRegex pattern="^\+?\d+$"/>
+      	</h:inputText>
+      	<h:message for="phoneAdd" style="color:red"/></p>
+      	<p>#{msgs.profile_mail}<br/><h:inputText id="mailAdd" required="true" requiredMessage=" #{msgs.message_empty_field}" value="#{addPage.record.mail}" validatorMessage=" #{msgs.message_wrong_mail}">
+      		<f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$"/>
+      	</h:inputText>
+      	<h:message for="mailAdd" style="color:red"/></p>
+      	<p>#{msgs.profile_birthdate}<br/><rich:calendar id="calendarAdd" required="true" requiredMessage=" #{msgs.message_empty_field}" cellWidth="24px" cellHeight="22px" popupStyle="width:200px" locale="#{sessionInformation.currentLocale}" datePattern="yyyy-MM-dd" value="#{addPage.record.birthDate}"/>
+      	<h:message for="calendarAdd" style="color:red"/></p>
+      	<p>#{msgs.profile_photo}<rich:fileUpload immediateUpload="true" id="fileUploadId"  fileUploadListener="#{addPage.listener}" listHeight="100%" acceptedTypes="jpg, gif, png, bmp" maxFileSize="2000000"/></p>
       	<p><h:commandButton value="#{msgs.add_button}" action="#{addPage.addRecord}"/> </p>
-      	<p><h:messages style="color:red" /></p>
     </h:form>
 </ui:composition>
