--- a/JSFProject/WebContent/jsf/control.xhtml
+++ b/JSFProject/WebContent/jsf/control.xhtml
@@ -8,7 +8,7 @@
     <h:outputScript library="js" name="jquery-2.2.2.min.js" target="head"/>
     <h:form><p><h:messages style="color:red" /></p></h:form>
     <table id="controlTable">
-    	<caption>#{msgs.control_caption}</caption>
+    	<caption style="font-size: 17px; font-weight:bold">#{msgs.control_caption}</caption>
     	<tr> 
 			<th>#{msgs.view_header_number}</th>
 			<th>#{msgs.control_header_name}</th>
