--- a/JSFProject/WebContent/jsf/view.xhtml
+++ b/JSFProject/WebContent/jsf/view.xhtml
@@ -5,7 +5,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:a4j="http://richfaces.org/a4j"
     xmlns:rich="http://richfaces.org/rich">  
-    <h:dataTable binding="#{table}" value="#{viewPage.listRecords}" var="record">
+    <br/><h:dataTable binding="#{table}" value="#{viewPage.listRecords}" var="record">
     	<h:column>
     		<f:facet name="header">#{msgs.view_header_number}</f:facet>
     		<h:form>
